# tests_plotter

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app.py  config.py  main.py  main_docker.py
app/api/: __init__.py  experiments.py  s3.py  websockets.py
app/db/: tables.py
app/models/: data.py  experiments.py
app/services/: auth.py  depends.py  experiments.py  s3.py
app/templates/: index.html
